# npc-property-dashbord

./: .env  .env.example  .gitignore  AGENTS.md  AGENTS_NPC_Property_Dashboard.md  ALL_EDGE_FUNCTIONS_SECURED.md  AUTH_FIXES_SUMMARY.md  CRITICAL_FUNCTIONS_SECURED.md  DEPLOYMENT_COMPLETE.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_STATUS.md  DEPLOY_FUNCTIONS_GUIDE.md  EDGE_FUNCTIONS_AUDIT.md  EMAIL_RLS_FIX_SUMMARY.md  EXTENSIONS_MIGRATION_WARNING.md  EXTENSIONS_TASK_SUMMARY.md  FINANCIAL_DATA_ANALYSIS.md  HIGH_PRIORITY_FUNCTIONS_SECURED.md  LOW_PRIORITY_FUNCTIONS_SECURED.md  MANUAL_TESTING_GUIDE.md  MCP_DEPLOYMENT_INFO.md  MEDIUM_PRIORITY_FUNCTIONS_COMPLETE.md  MEDIUM_PRIORITY_FUNCTIONS_SECURED.md  NPC_Property_Dashboard_Codex_Security_Implementation_Plan.md  PATENT-APPLICATION-DRAFT.md  PDF-SIDECAR-DEPLOY-HELPER-README.md  README-BLUEPRINT.md  README.md  REPORT_ANALYSIS_RLS_FIX_SUMMARY.md  RLS_ANALYSIS.md  RLS_ANALYSIS_NEWLY_SECURED_FUNCTIONS.md  RLS_FIXES_COMPLETE.md  RLS_FIX_PRIORITY1_COMPLETE.md  RLS_FIX_PRIORITY2_COMPLETE.md  ROLLBACK_GUIDE.md  SECURITY_CHECKLIST.md  SECURITY_QUICK_START.md  SECURITY_REMEDIATION_PLAN.md  SECURITY_SITUATION_REPORT.md  SECURITY_STATUS_QUICK_REFERENCE.md  (+19 more)
.github/: CODEOWNERS
.lovable/: plan.md
archives/: CODEBASE_MODULARIZATION_MAP.md
docs/: ARCHITECTURAL_FLOW.md  BORROWING_CAPACITY_IMPLEMENTATION_PLAN.md  BORROWING_CAPACITY_MODULE_SPEC.md  CASH_FLOW_CASCADE_LOGIC.md  COMMUNICATION_FLOW.md  COMPASS_40_PAGE_ARCHITECTURE.md  GHL_MIGRATION_CASCADE_INVESTIGATION_2026-04-25.md  IMPORT_FROM_URL.md  INGESTION_RECONSTRUCTION_EDITOR_PLAN.md  PDF_RECONSTRUCTION_ARCHITECTURE.md  PDF_TEMPLATE_BUILDER.md  PHASES_1_2_3_COMPLETE_SUMMARY.md  PHASE_1_COMPLETION.md  PHASE_2_COMPLETION.md  PHASE_2_COMPLETION_SUMMARY.md  PHASE_3_COMPLETION.md  PHASE_3_COMPLETION_SUMMARY.md  PHASE_3_IMPLEMENTATION.md  PROPERTY_DATA_API_INTEGRATION_ARCHITECTURE.md  SCHOOL_DATA_IMPORT_GUIDE.md  STYLE_CONSISTENCY_AND_THEMING_PLAN.md  TEMPLATE_BUILDER_REHAUL_PLAN.md  UNIVERSAL_IMPORT.md  WEEK_5_6_COMPLETION.md  WHITE_LABEL_TOKEN_CONTRACT.md  branding-page-audit.md  dashboard-theme-foundation.md  data-import-ui-scope-checklist.md  error-logs-phase1-audit.md  luxury-light-theme-phase1-audit.md  luxury-light-theme-phase2-token-foundation.md  market-updates-phase-2.md  marketing-analytics-phase1-audit.md  messaging-governance-phase3-rollout.md  messaging-governance-phase4-production-readiness.md  messaging-governance-phase8-scenarios.md  messaging-governance-phase9-deployment.md  mission-control-device-cap.md  mission-control-integration.md  mission-control-pricing-catalog.md  (+15 more)
pdf-parse-service/: DEPLOY.md  Dockerfile  Dockerfile.vnext  LANE-POLICY.md  METRICS.md  NOTICE.md  README.md  app.py  app_vnext.py  docling_capabilities.py  docling_runtime_legacy.py  docling_runtime_protocol.py  lane_policy.py  (+11 more)
pdf-parse-service/vnext/: .gitignore  README.md  capability-baseline.json  download_models.py  model-manifest.json  pyproject.toml
pdf-parse-service/vnext/tests/: compat_harness.py  generate_fixtures.py
pdf-parse-service/vnext/tests/fixtures/: vnext_to_v3_example.json
(+3287 files in other folders)
